fixed receiving messages from server added a button to close connection between client and server

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,4 +70,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/restartClient"/>
+
+    <Button
+        android:id="@+id/closeConnection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/closeConnection"/>
+
+    <TextView
+        android:id="@+id/txtVwServerStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
